--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="./js/script.js" defer></script>
   </head>
   <body>
-    <h1>Autoservivio Muñoz</h1>
+    <h1>Autoservicio Muñoz</h1>
   </body>
 </html>
