guardar los cambios

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <script src="./js/script.js" defer></script>
   </head>
   <body>
-    <h1>Autoservicio Muñoz</h1>
+    <header>
+      <div id="title-container">
+        <h1 id="h1">Autoservicio Muñoz</h1>
+      </div>
+      <input type="text" id="input" />
+      <div id="container"></div>
+      <ul id="asesores"></ul>
+      <div id="productos"></div>
+    </header>
+    <main>
+      <button id="plus-button">+</button>
+      <span id="counter">0</span>
+      <button id="minus-button">-</button>
+    </main>
+    <footer>
+      <ul>
+        <li class="menu">Inicio</li>
+        <li class="menu">Productos</li>
+        <li class="menu">Sobre Nosotros</li>
+      </ul>
+    </footer>
   </body>
 </html>
