Actualización del proyecto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/script.js" defer></script>
   </head>
   <body>
@@ -20,6 +21,20 @@
       <button id="plus-button">+</button>
       <span id="counter">0</span>
       <button id="minus-button">-</button>
+      <section class="grid-container content-grid">
+        <article class="grid-item">
+          <div class="block-element">
+            <div class="center-text">
+              <img src="./assets/colosal.webp" alt="colosal" />
+            </div>
+            <h2 id="producto-nombre"></h2>
+
+            <div class="center-text">
+              <button class="btn-shop">Contactar</button>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
     <footer>
       <ul>
