guardar los cambios

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
         <li class="menu">Sobre Nosotros</li>
       </ul>
     </footer>
+    <section id="productos-container"></section>
   </body>
 </html>
